# ygg-kernel-amd64

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Kernel.config  Kernel.defconfig  LICENSE  Makefile  README.md  config  config.h.in  defconfig  install-headers.sh
arch/amd64/: acpi_osl_hw.c  acpi_osl_init.c  acpi_osl_irq.c  acpi_osl_printf.c  acpi_osl_table.c  acpi_osl_thread.c  binfmt_elf.c  cpu.c  cpuid.c  entry.S  fpu.S  gdbrc  kernel.c  link.ld  sched_s.S  syscall.c  syscall_s.S
arch/amd64/acpica/: CMakeLists.txt
arch/amd64/boot/: entry.S  multiboot.S  upper.S  yboot.S  yboot_data.c
arch/amd64/disasm/: front.c  x86.c  x86_arg.c  x86_op.c
arch/amd64/hw/: acpi.c  ap_code.nasm  apic.c  con.c  exc.c  exc_s.S  gdt.c  gdt_s.S  idt.c  ioapic.c  irq.c  irq0.S  irq_trace.S  irqs_s.S  ps2.c  rs232.c  rtc.c  timer.c  vesa.c
arch/amd64/loader/: boot.S  link.ld  loader.c  util.c
arch/amd64/mm/: heap.c  map.c  mm.c  phys.c  pool.c  vmalloc.c
arch/amd64/smp/: ipi.c  irq_ipi_s.S  smp.c
arch/amd64/sys/: spin_s.S
conf/make/: amd64.mk  amd64_compiler.mk  none.mk
doc/: Doxyfile  Makefile  building.rst  conf.py  index.rst  memory-amd64  notes.txt
doc/dev/: pci.rst
doc/sys/: mem.rst
doc/x86/: irq.md  lapic.md
drivers/ata/: ahci.c
drivers/net/: rtl8139.c
drivers/pci/: pci.c  pcidb.c
drivers/usb/: device.c  driver.c  hub.c  usb.c  usb_uhci.c  usbkbd.c
etc/: Kernel.makefile  KernelOptions.makefile  file.txt  init  init.S  init.c
etc/amd64/: gdbrc
etc/cmake/: Options.cmake
etc/make/: conf.mk
etc/make/amd64/: compiler.mk  conf.mk  (+2 more)
fs/: fs_class.c  node.c  ofile.c  ram.c  ram_tar.c  sysfs.c  tar.c  vfs.c  vfs_access.c  vfs_ops.c
fs/ext2/: alloc.c  block.c  dir.c  ext2.c  node.c
include/asm/: asm_irq.h
include/fs/: fs.h  list.h  node.h  ofile.h  ram.h  ram_tar.h  sysfs.h  tar.h  tree.h  vfs.h
include/net/: arp.h  class.h  eth.h  icmp.h  if.h  inet.h  net.h  packet.h  ports.h  raw.h  socket.h  tcp.h  udp.h  util.h
include/sys/: assert.h  attr.h  binfmt_elf.h  blk.h  chr.h  config.h  console.h  ctype.h  debug.h  dev.h  display.h  elf.h  errno.h  fbdev.h  hash.h  heap.h  init.h  input.h  ioctl.h  kernel.h  kidle.h  list.h  mem.h  mm.h  mman.h  mod.h  panic.h  psf.h  random.h  reboot.h  ring.h  sched.h  select.h  shmem.h  signum.h  snprintf.h  spin.h  stat.h  string.h  syms.h  (+13 more)
include/user/: acpi.h  dirent.h  errno.h  fcntl.h  inet.h  mman.h  module.h  mount.h  netctl.h  reboot.h  select.h  signal.h  signum.h  socket.h  stat.h  syscall.h  termios.h  time.h  types.h  un.h  utsname.h  video.h  wait.h
net/: arp.c  eth.c  icmp.c  if.c  inet.c  net.c  ports.c  raw.c  socket.c  tcp.c  udp.c  unix.c  util.c
src/sys/: attr.h  debug.c  mem.c  panic.c  sched.c  string.c  string.h  time.c
sys/: binfmt_elf.c  blk.c  chr.c  conf.mk  config.c  console.c  ctype.c  debug.c  dev.c  display.c  errno.c  errno.h  execve.c  hash.c  init.c  input.c  kernel.c  line.c  list.c  mod.c  panic.c  process.c  psf.c  random.c  reboot.c  ring.c  sched.c  shmem.c  snprintf.c  string.c  syms.c  sys_file.c  sys_net.c  sys_sys.c  thread.c  time.c  tty.c  ubsan.c  wait.c
sys/amd64/: acpi_osl_hw.c  acpi_osl_irq.c  acpi_osl_mem.c  binfmt_elf.c  conf.mk  cpu.c  cpuid.c  entry.S  gdbrc  grub.cfg  incbin.S  kernel.c  link.ld  sched_s.S  string.S  sys_file.c  sys_mem.c  sys_proc.c  sys_sys.c  syscall.c  syscall_s.S
sys/blk/: part_gpt.c  ram.c
sys/block/: blk.c  cache.c  part_gpt.c  pseudo.c  ram.c
sys/char/: chr.c  input.c  line.c  pipe.c  ring.c  tty.c
sys/dev/: blk.c  chr.c  dev.c  input.c  line.c  ram.c  ring.c  tty.c
sys/font/: logo.c  psf.c
sys/fs/: fs_class.c  node.c  pseudo.c  sysfs.c  tar.c  vfs.c  vfs_access.c  vfs_ops.c
sys/mem/: shmem.c  slab.c
sys/net/: arp.c  eth.c  in.c  netdev.c
sys/usb/: device.c  driver.c  usb.c  usbkbd.c
sys/vfs/: devfs.c  ext2sh.c  fs_class.c  hash.c  node.c  pseudo.c  pty.c  sysfs.c  tar.c  vfs.c  vfs_access.c  vfs_ops.c
usr/: Makefile  hello.c  init.c  time.c
usr/etc/: init.c
usr/libc/: Makefile  crt0.S  dirent.c  errno.c  global.c  init.c  malloc.c  printf.c  program.ld  signal.c  stdio.c  string.c  syscall.c  time.c  vsnprintf.c
(+378 files in other folders)
